docs: reflect landed #145/#147 JEP 472 packaging on master
Record the Enable-Native-Access manifest emit as packaging only, not a
JDK 25 support badge. The #141 E2E warning was not re-run.

Co-authored-by: Gao Yu <gaoyu06@users.noreply.github.com>